After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754254 - Compile error at GTK_POLICY_EXTERNAL
Compile error at GTK_POLICY_EXTERNAL
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-28 16:03 UTC by Egmont Koblinger
Modified: 2015-08-28 16:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Egmont Koblinger 2015-08-28 16:03:08 UTC
Can't compile on Vivid:

  CC       gnome_terminal_server-terminal-notebook.o
terminal-notebook.c: In function ‘update_tab_visibility’:
terminal-notebook.c:71:8: error: ‘GTK_POLICY_EXTERNAL’ undeclared (first use in this function)

chpe: revert f92a88d0 or bump the required gtk+ version?
Comment 1 Christian Persch 2015-08-28 16:30:16 UTC
I added a #if gtk version check.