notebook: Add ifdef for gtk+ < 3.16

https://bugzilla.gnome.org/show_bug.cgi?id=754254